fix: Allow text detail box to scroll when content doesn't fit.

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ body {
 	z-index: 1;
 	padding: 10px;
 	color: white;
+	overflow-y: auto;
 }
 
 .projects img {
